<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_5sdp"
    android:background="@color/white"
    app:cardCornerRadius="@dimen/_2sdp"
    app:cardElevation="@dimen/_2sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/availableItemImageView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_75sdp"
            android:contentDescription="@string/content_description"
            android:src="@drawable/ic_launcher_foreground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/availableItemDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_2sdp"
            android:layout_marginEnd="@dimen/_2sdp"
            android:fontFamily="sans-serif-medium"
            android:minLines="3"
            android:padding="@dimen/_2sdp"
            android:text="@string/sample_text"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/availableItemImageView" />

        <TextView
            android:id="@+id/availableItemPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_2sdp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="@dimen/_9sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/availableItemDescription"
            app:layout_constraintTop_toBottomOf="@+id/availableItemDescription" />

        <TextView
            android:id="@+id/addTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/curve_grey_bg"
            android:maxLines="1"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_2sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingBottom="@dimen/_2sdp"
            android:text="@string/add"
            android:textColor="@color/red_text"
            android:textSize="@dimen/_9sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/availableItemDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>