<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/white"
    android:fillViewport="true">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:text="@string/available_items"
                android:textColor="@color/red_text"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/availableItemRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/materialTextView"
                app:layout_constraintTop_toBottomOf="@id/materialTextView"
                app:spanCount="2"
                tools:itemCount="4"
                tools:listitem="@layout/available_item" />

            <View
                android:id="@+id/seperater"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@color/light_grey_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/availableItemRecyclerView"
                app:layout_constraintTop_toBottomOf="@id/availableItemRecyclerView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/bottomItemRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/materialTextView"
                app:layout_constraintTop_toBottomOf="@id/seperater"
                tools:itemCount="5"
                tools:listitem="@layout/bottom_item" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cartContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:animateLayoutChanges="true"
        android:background="@color/red_text"
        android:padding="@dimen/_10sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description"
            android:src="@drawable/ic_baseline_shopping_cart_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cartCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:text="@string/item"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <TextView
            android:id="@+id/viewCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/curve_white_bg"
            android:paddingStart="@dimen/_15sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:text="@string/view_cart"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>